Add web studio file import
